parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> echo options string
Rule 2     echo -> ECHO
Rule 3     string -> STRING
Rule 4     options -> option options
Rule 5     options -> empty
Rule 6     empty -> <empty>
Rule 7     option -> OPTION

Terminals, with rules where they appear

ECHO                 : 2
OPTION               : 7
STRING               : 3
error                : 

Nonterminals, with rules where they appear

echo                 : 1
empty                : 5
option               : 4
options              : 1 4
statement            : 0
string               : 1

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . echo options string
    (2) echo -> . ECHO

    ECHO            shift and go to state 3

    statement                      shift and go to state 1
    echo                           shift and go to state 2

state 1

    (0) S' -> statement .



state 2

    (1) statement -> echo . options string
    (4) options -> . option options
    (5) options -> . empty
    (7) option -> . OPTION
    (6) empty -> .

    OPTION          shift and go to state 7
    STRING          reduce using rule 6 (empty -> .)

    options                        shift and go to state 4
    option                         shift and go to state 5
    empty                          shift and go to state 6

state 3

    (2) echo -> ECHO .

    OPTION          reduce using rule 2 (echo -> ECHO .)
    STRING          reduce using rule 2 (echo -> ECHO .)


state 4

    (1) statement -> echo options . string
    (3) string -> . STRING

    STRING          shift and go to state 9

    string                         shift and go to state 8

state 5

    (4) options -> option . options
    (4) options -> . option options
    (5) options -> . empty
    (7) option -> . OPTION
    (6) empty -> .

    OPTION          shift and go to state 7
    STRING          reduce using rule 6 (empty -> .)

    option                         shift and go to state 5
    options                        shift and go to state 10
    empty                          shift and go to state 6

state 6

    (5) options -> empty .

    STRING          reduce using rule 5 (options -> empty .)


state 7

    (7) option -> OPTION .

    OPTION          reduce using rule 7 (option -> OPTION .)
    STRING          reduce using rule 7 (option -> OPTION .)


state 8

    (1) statement -> echo options string .

    $end            reduce using rule 1 (statement -> echo options string .)


state 9

    (3) string -> STRING .

    $end            reduce using rule 3 (string -> STRING .)


state 10

    (4) options -> option options .

    STRING          reduce using rule 4 (options -> option options .)

